# juce-vst3-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
__PLUGIN_NAME__/source/: PluginEntry.cpp
build_harness_check/: CMakeCache.txt  __PLUGIN_NAME__.slnx  cmake_install.cmake
build_harness_check/__PLUGIN_NAME__.dir/Release/: __PLUGIN_NAME___SharedCode.lib.recipe
build_harness_check/__PLUGIN_NAME__.dir/Release/__PLUGIN_NAME__.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_harness_check/__PLUGIN_NAME___VST3.dir/Release/: __PLUGIN_NAME__.vst3.recipe
build_harness_check/__PLUGIN_NAME___VST3.dir/Release/__PLUGIN.F1DFD12E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  __PLUGIN_NAME___VST3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_harness_check/__PLUGIN_NAME___artefacts/JuceLibraryCode/: Info.txt  __PLUGIN_NAME___resources.rc
build_harness_check/__PLUGIN_NAME___vst3_helper.dir/Release/: __PLUGIN_NAME___vst3_helper.exe.recipe
build_harness_check/tools/vst3_harness/: cmake_install.cmake
build_no_harness/: CMakeCache.txt  __PLUGIN_NAME__.slnx  cmake_install.cmake
build_no_harness/__PLUGIN_NAME___VST3.dir/Release/: __PLUGIN_NAME__.vst3.recipe
build_no_harness/__PLUGIN_NAME___artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build_no_harness/__PLUGIN_NAME___rc_lib.dir/Release/: __PLUGIN_NAME___rc_lib.lib.recipe  __PLUGIN_NAME___resources.res
build_no_harness/__PLUGIN_NAME___vst3_helper.dir/Release/: __PLUGIN_NAME___vst3_helper.exe.recipe
scripts/: gen_test_wavs.py  run_harness.ps1
tests/cases/: example.json
tools/vst3_harness/: CMakeLists.txt
tools/vst3_harness/src/: main.cpp
(+94 files in other folders)
